--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
     "@nestjs/swagger": "^7.4.0",
     "@nestjs/typeorm": "^10.0.2",
     "@types/bcrypt": "^5.0.2",
+    "@types/luxon": "^3.4.2",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "dotenv": "^16.4.5",
+    "luxon": "^3.5.0",
     "mysql2": "^3.11.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
